# monorepo

./: .gitignore  .hadolint.yaml  .mdlrc  .pytest.toml  .yamllint.yml  README.md  dagger.json  pylock.toml  pyproject.toml
.githooks/: pre-commit
.github/: dependabot.yml
ansible/: pylock.toml  pyproject.toml  vault_passwd
ansible/collections/caseysparkz/environment/: galaxy.yml
ansible/collections/caseysparkz/environment/roles/bash/files/bash/: bash_aliases  bashrc  vars.sh
ansible/collections/caseysparkz/environment/roles/dotfiles/files/config/Yubico/: u2f_keys
ansible/collections/caseysparkz/environment/roles/dotfiles/tasks/: main.yml
ansible/collections/caseysparkz/environment/roles/dotfiles/vars/: main.yml
ansible/collections/caseysparkz/environment/roles/git/files/config/gh/: config.yml  hosts.yml
ansible/collections/caseysparkz/environment/roles/git/tasks/: configure.yml
ansible/collections/caseysparkz/environment/roles/minikube/files/minikube/config/: config.json
ansible/collections/caseysparkz/environment/roles/minikube/tasks/: main.yml
ansible/collections/caseysparkz/environment/roles/ssh/: README.md
ansible/collections/caseysparkz/environment/roles/vim/files/vim/: vimrc
ansible/collections/caseysparkz/environment/roles/vim/files/vim/ftplugin/: json.vim
ansible/collections/caseysparkz/environment/roles/vim/files/vim/plugin/: terraform.vim
ansible/collections/caseysparkz/environment/roles/vim/files/vim/templates/: docker-compose.yml.template
ansible/collections/caseysparkz/environment/roles/vim/files/vim/templates/helm.d/: Chart.yaml.template
ansible/collections/caseysparkz/environment/roles/vim/files/vim/templates/terraform.d/: providers.tf  variables.tf
ansible/host_vars/localhost/: main.yml
dagger/: .gitignore  go.mod  (+1 more)
(+207 files in other folders)
