[project]
name = "infrastructure"
description = "Global installer for the monorepo."
requires-python = ">=3.13"
version = "0.1.0"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "CaseySparkz", email = "contact@caseysparkz.com" }]
dependencies = [
    "infra_ansible @ file:./ansible",
    "boto3==1.43.46",
]

[project.optional-dependencies]
dev = ["ipython==9.15.0"]
test = [
    "infra_ansible[test]",

    "boto3-stubs==1.43.40",
    "botocore-stubs==1.43.14",
    "moto==5.2.2",
    "mypy==2.1.0",
    "pip-audit==2.10.1",
    "pytest-cov==7.1.0",
    "pytest==9.1.1",
    "ruff==0.15.21",
    "types-boto3[ses]",
]
all = [
    "infrastructure[dev]",
    "infrastructure[test]",
    "infra_ansible[all]",
]

[tool.setuptools.packages.find]
where = []

[build-system]
build-backend = "setuptools.build_meta"
requires-python = ">= 3.13"
requires = ["setuptools"]

# Tools ========================================================================
# Misc. -----------------------------------------------------------------------
[tool.ipdb]
context = 20
