[project]
name = "infra-ansible"
description = "Ansible collections and playbooks for configuring Linux systems."
requires-python = ">= 3.13"
version = "1.0.0"
readme = { file = "README.md", content-type = "text/markdown" }
dependencies = ["ansible-core==2.21.1"]

[project.optional-dependencies]
test = ["ansible-lint==26.6.0"]
all = ["infra-ansible[test]"]

[tool.setuptools.packages.find]
where = []

[build-system]
build-backend = "setuptools.build_meta"
requires-python = ">= 3.13"
requires = ["setuptools-git-versioning==3.1.0"]

[tool.ipdb]
context = 20
